demo-docker/monitoring-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring-vs     
spec:
  hosts:
  - "*"
  gateways:
  - monitoring-gateway
  http:
  - match:
    - uri:
        prefix: "/monitoring/"
    route:
    - destination:
        host: sia-monitoring
        port:
          number: 8080
