demo-docker/virtualservice-demo-jvm.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-jvm    
spec:
  hosts:
  - "*"
  gateways:
  - monitoring/monitoring-gateway
  http:
  - match:
    - uri:
        exact: /jvm
    rewrite:
        uri: /
    route:
    - destination:
        host: masterspringboot-git
        port:
          number: 8080
