demo-docker/virtualservice-demo-quarkus-jvm.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-quarkus-jvm    
spec:
  hosts:
  - "*"
  gateways:
  - monitoring/monitoring-gateway
  http:
  - match:
    - uri:
        exact: /quarkus-jvm
    rewrite:
        uri: /demo
    route:
    - destination:
        host: quarkus-jvm
        port:
          number: 8080
